# repoeval

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mvp-architecture.md
src/repoeval/: __init__.py  cli.py  fixtures.py  generate.py  git.py  isolation.py  models.py  report.py  routing.py  scoring.py
src/repoeval/runners/: __init__.py  base.py  codex.py  mock.py
tests/: test_cli.py  test_cli_e2e.py  test_cli_run_git_history.py  test_fixtures.py  test_generate.py  test_isolation.py  test_models.py  test_report.py  test_routing.py  test_runners_codex.py  test_runners_mock.py  test_runners_registry.py  test_scoring.py
